fix disponibilidad - citas - solicitudcitas